--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ build/
 develop-eggs/
 dist/
 downloads/
+static/
 eggs/
 .eggs/
 lib/
@@ -39,7 +40,7 @@ wheels/
 *.pyc
 db.sqlite3
 db.sqlite3-journal
-media/
+static/media/
 *.pyc
 local_settings.py
 
